--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@chakra-ui/react": "^2.5.5",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "framer-motion": "^10.11.5",
+    "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.3.0",
     "mongoose": "^7.0.4",
     "next": "13.3.0",
