--- a/package.json
+++ b/package.json
@@ -15,17 +15,19 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.3.0",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
-    "d3": "^7.8.4",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.0",
+    "luxon": "^3.3.0",
     "mongoose": "^7.1.0",
     "next": "13.3.0",
     "nodemailer": "^6.9.1",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
