--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "gsap": "^3.11.5",
     "jsonwebtoken": "^9.0.0",
     "luxon": "^3.3.0",
     "mongoose": "^7.1.0",
@@ -30,7 +31,6 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
-    "react-redux": "^8.0.5",
     "react-toastify": "^9.1.2",
     "redux-persist": "^6.0.0"
   },
